2000-07-07  Mark Kettenis  <kettenis@gnu.org>

	* hurd/vpprintf.c [USE_IN_LIBIO]: Include <libioP.h>.
	(do_write): Renamed from pwrite.
	(vpprintf) [USE_IN_LIBIO]: Adjust for renaming and reshufling of
	`struct _IO_cookie_file'.

2000-07-07  Ulrich Drepper  <drepper@redhat.com>

	* malloc/mtrace.pl: Exit with exit code 1 if any leak was
	detected.
	* malloc/tst-mtrace.sh: Run mtrace script.

2000-07-07  Greg McGary  <greg@mcgary.org>

	* posix/regex.c (EXTEND_BUFFER): Compute increment once.
	Move all three components of a bounded pointer.

2000-07-07  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/locale.c (write_locales): Don't simply add all
	directories found in the subdir, test whether at least the
	LC_CTYPE file is in there.

2000-07-06  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/euc-jp.c: Map characters in C1 area to itself.
	* iconvdata/euc-kr.c: Likewise.

	* stdio-common/vfprintf.c (process_string_arg): Check result of
	wcrtomb call and bail out if it failed.

	* malloc/Makefile (test-srcs): Add tst-mtrace.
	(distribute): Add tst-mtrace.sh.
	Add rule to run tst-mtrace.sh.
	* malloc/tst-mtrace.c: New file.
	* malloc/tst-mtrace.sh: New file.

	* include/signal.h: Declare __libc_sigaction.
	* sysdeps/unix/sysv/linux/Versions: Export __libc_sigaction.
	* sysdeps/unix/sysv/linux/sigaction.c: Add __libc_sigaction alias.
	* sysdeps/unix/sysv/linux/arm/sigaction.c: Likewise.
	* sysdeps/unix/sysv/linux/i386/sigaction.c: Likewise.
	* sysdeps/unix/sysv/linux/ia64/sigaction.c: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/sigaction.c: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc64/sigaction.c: Likewise.

	* configure.in: Fix CFLAGS-memprofstat.c definition after
	2000-06-19 change.
	Patch by Bradford W. Johnson <bradford@math.umn.edu>.

2000-07-06  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/sparc/sparc32/dl-machine.h (elf_machine_rela): Pass 0
	instead of NULL to elf_machine_fixup_plt t argument.